<resources>
    <string name="app_name">ChequeCalculator</string>
    <string name="menu_b_new_event">New event</string>
    <string name="ne_members_tv_title">Select members of event</string>
    <string name="button_next">Next</string>
    <string name="button_add">Add</string>
    <string name="ne_initial_tv_title">Name and date of event</string>
    <string name="ne_initial_et_name_hint">Name of event</string>
    <string name="ne_initial_et_date_hint">Date of event (dd.mm.yyyy)</string>
    <string name="menu_nav_ne_initial">Initial</string>
    <string name="menu_nav_ne_members">Members</string>
    <string name="ne_receipts_tv_title">Receipts of event</string>
    <string name="ne_receipts_tv_add">New receipt</string>
    <string name="button_finish">Finish</string>
    <string name="menu_nav_ne_receipts">Receipts</string>
    <string name="ne_nr_tv_title">Create new receipt</string>
    <string name="ne_nr_et_name">Name of receipt</string>
    <string name="ne_nr_tv_add">New position</string>
    <string name="ne_nr_tv_payer">Payer:</string>
    <string name="ip_et_name_hint">Name of position</string>
    <string name="ip_et_price_hint">Price</string>
    <string name="button_remove">Remove</string>
    <string name="ipm_et_part">Part in %</string>
    <string name="spinner_no_users">No users left</string>
    <string name="ne_nr_tv_price_ph">Total price: %.2f RUB</string>
    <string name="ne_nr_tv_no_members">Members not found</string>
    <string name="button_expand">Expand</string>
    <string name="button_hide">Hide</string>
    <string name="price_ph">%.2f RUB</string>
    <string name="button_validate">Validate</string>
    <string name="ne_nr_validation_result_ok">Validated successfully</string>
    <string name="ne_nr_validation_result_name">Please enter receipt name</string>
    <string name="ne_nr_validation_result_payer">Please specify payer</string>
    <string name="ne_nr_validation_result_parts">Invalid parts. Check for errors</string>
    <string name="ne_nr_pos_invalid_message_duplicated">Duplicated members</string>
    <string name="ne_nr_pos_invalid_message_name">Name is empty</string>
    <string name="ne_nr_pos_invalid_message_part">Negative or zero part</string>
    <string name="ne_nr_pos_invalid_message_sum">Parts sum != 100</string>
    <string name="ne_nr_pos_invalid_message_price">Neagtive or zero price</string>
    <string name="ne_nr_validation_result_empty">No positions</string>
    <string name="ne_nr_pos_invalid_message_no_parts">No members</string>
    <string name="login_tv_title">Login</string>
    <string name="login_et_login_hint">UserName</string>
    <string name="button_login">Login</string>
    <string name="login_tv_register"><u>Create new account</u></string>
    <string name="register_tv_title">Register</string>
    <string name="register_tv_login"><u>Already has account</u></string>
    <string name="button_register">Register</string>
    <string name="login_et_telegram_hint">\@telegram_tag</string>
    <string name="login_toast_empty_login">Please input login</string>
    <string name="login_toast_no_user">User not found</string>
    <string name="login_toast_unknown">Unknown error has occurred</string>
    <string name="register_toast_empty_login">Please input login</string>
    <string name="register_toast_empty_telegram">Please input telegram tag</string>
    <string name="register_toast_telegram_tag_char">Telegram login must start with \'@\'</string>
    <string name="register_toast_login_is_occuppied">Yor username is already used</string>
    <string name="menu_nav_new_event">New event</string>
    <string name="error_get_all_user_fail">Could not establish connection with server, retrying...</string>
</resources>