<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.newevent.NewEventReceiptsFragment"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/ne_receipts_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BaseText.H1"
        android:text="@string/ne_receipts_tv_title" />

    <LinearLayout
        android:id="@+id/ne_receipts_ll_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ne_receipts_tv_title"
        android:layout_marginTop="@dimen/margin_vertical"
        android:orientation="horizontal"
        android:layoutDirection="rtl">

        <Button
            android:id="@+id/ne_receipts_b_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <TextView
            android:id="@+id/ne_receipts_tv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BaseText.H4"
            android:text="@string/ne_receipts_tv_add"
            android:textAlignment="viewStart"
            android:layout_marginStart="@dimen/margin_horizontal" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ne_receipts_rv_receipts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ne_receipts_ll_add"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:orientation="vertical"
        tools:listitem="@layout/item_single_button_title"/>

    <Button
        android:id="@+id/ne_receipts_b_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ne_receipts_rv_receipts"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/button_finish" />

</androidx.constraintlayout.widget.ConstraintLayout>