<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/screen_padding"
    tools:context=".ui.newevent.NewEventMembersFragment">

    <TextView
        android:id="@+id/ne_members_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BaseText.H1"
        android:text="@string/ne_members_tv_title" />

    <LinearLayout
        android:id="@+id/ne_members_ll_add"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ne_members_tv_title"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_width="match_parent"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ne_members_b_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/ne_members_spinner_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/ne_members_tv_no_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/BaseText.H4"
                android:text="@string/spinner_no_users" />

        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ne_members_rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_vertical"
        app:layout_constraintTop_toBottomOf="@id/ne_members_ll_add"
        app:layout_constraintBottom_toTopOf="@id/ne_members_b_next"
        android:orientation="vertical"
        tools:listitem="@layout/item_single_button_title" />

    <Button
        android:id="@+id/ne_members_b_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_next" />

</androidx.constraintlayout.widget.ConstraintLayout>