<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="20dp"
        style="@style/Card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/screen_padding_horizontal_large"
            android:paddingVertical="@dimen/screen_padding">

            <TextView
                android:id="@+id/login_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/BaseText.H1"
                android:text="@string/login_tv_title" />

            <EditText
                android:id="@+id/login_et_login"
                android:layout_width="@dimen/login_et_login_width"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_tv_title"
                style="@style/BaseText.H4"
                android:hint="@string/login_et_login_hint"
                android:autofillHints="no"
                android:layout_marginTop="@dimen/margin_vertical"
                android:inputType="text" />

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_et_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_vertical"
                android:text="@string/login_tv_register"
                style="@style/BaseText.H5"/>

            <Button
                android:id="@+id/login_b_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_tv_register"
                android:layout_marginTop="@dimen/margin_vertical"
                android:text="@string/button_login" />

            <TextView
                android:id="@+id/login_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_b_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_vertical"
                tools:text="Invalid username"
                android:visibility="gone"
                style="@style/BaseText.H5.Error"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/login_pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginStart="@dimen/margin_horizontal"/>

    </androidx.cardview.widget.CardView>

</FrameLayout>